err/feedzilla.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demo'...
Compiling './lib/python3.5/site-packages/demo/fabfile.py'...
***   File "./lib/python3.5/site-packages/demo/fabfile.py", line 69
    print 'Cancelling'
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/feedzilla'...
Compiling './lib/python3.5/site-packages/feedzilla/context_processor.py'...
***   File "./lib/python3.5/site-packages/feedzilla/context_processor.py", line 6
    print 'key', key
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/feedzilla/filter.py'...
***   File "./lib/python3.5/site-packages/feedzilla/filter.py", line 19
    return re.compile(ur'%s' % value, re.U | re.I)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedzilla/locale'...
Listing './lib/python3.5/site-packages/feedzilla/locale/pt_BR'...
Listing './lib/python3.5/site-packages/feedzilla/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/feedzilla/locale/ru'...
Listing './lib/python3.5/site-packages/feedzilla/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/feedzilla/locale/tr'...
Listing './lib/python3.5/site-packages/feedzilla/locale/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/feedzilla/management'...
Listing './lib/python3.5/site-packages/feedzilla/management/commands'...
Compiling './lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_analyze.py'...
***   File "./lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_analyze.py", line 30
    print 'Site %s redirects to %s' % (feed.site_url, resp.url)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_refilter.py'...
***   File "./lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_refilter.py", line 24
    print '%d posts processed' % posts.count()
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_stats.py'...
***   File "./lib/python3.5/site-packages/feedzilla/management/commands/feedzilla_stats.py", line 23
    print '%s\n%s\n%s' % (border, line, border)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedzilla/migrations'...
Compiling './lib/python3.5/site-packages/feedzilla/migrations/0011_setup_taggit_data.py'...
***   File "./lib/python3.5/site-packages/feedzilla/migrations/0011_setup_taggit_data.py", line 19
    print count
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/feedzilla/processors'...
Compiling './lib/python3.5/site-packages/feedzilla/processors/content_filter.py'...
***   File "./lib/python3.5/site-packages/feedzilla/processors/content_filter.py", line 31
    return re.compile(ur'%s' % value, re.U | re.I)
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedzilla/static'...
Listing './lib/python3.5/site-packages/feedzilla/static/feedzilla'...
Listing './lib/python3.5/site-packages/feedzilla/static/feedzilla/css'...
Listing './lib/python3.5/site-packages/feedzilla/static/feedzilla/img'...
Listing './lib/python3.5/site-packages/feedzilla/static/feedzilla/js'...
Listing './lib/python3.5/site-packages/feedzilla/templates'...
Listing './lib/python3.5/site-packages/feedzilla/templates/common'...
Listing './lib/python3.5/site-packages/feedzilla/templates/feeds'...
Listing './lib/python3.5/site-packages/feedzilla/templates/feedzilla'...
Listing './lib/python3.5/site-packages/feedzilla/templates/feedzilla/feed'...
Listing './lib/python3.5/site-packages/feedzilla/templatetags'...
Listing './lib/python3.5/site-packages/feedzilla/util'...
Compiling './lib/python3.5/site-packages/feedzilla/util/htmldata.py'...
***   File "./lib/python3.5/site-packages/feedzilla/util/htmldata.py", line 28
    exec "True = 1; False = 0"
                             ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/feedzilla/util/parse.py'...
***   File "./lib/python3.5/site-packages/feedzilla/util/parse.py", line 133
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedzilla-0.24.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
